force-app/main/default/objects/Form_Picklist__c/Form_Picklist__c.object-meta.xml
<CustomObject>
    <description>Represents a picklist of phrases that appears as radio buttons (or possibly a pull-down menu) in a form</description>
    <label>Form Picklist</label>
    <nameField>
        <label>Form Picklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Picklists</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>