force-app/main/default/objects/Form_Picklist__c/fields/Constant_values__c.field-meta.xml
<CustomField>
    <fullName>Constant_values__c</fullName>
    <description>Return-separated list of constant values for this picklist - the values should be numeric or some other form that does not need translating</description>
    <inlineHelpText>Return-separated list of constant values for this picklist - the values should be numeric or some other form that does not need translating</inlineHelpText>
    <label>Constant values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>