force-app/main/default/objects/Form_Picklist__c/fields/No_dupe_selections_within_item__c.field-meta.xml
<CustomField>
    <fullName>No_dupe_selections_within_item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Within an item, no two components based on this picklist may have the same selection.</description>
    <inlineHelpText>Within an item, no two components based on this picklist may have the same selection.</inlineHelpText>
    <label>No dupe selections within item</label>
    <type>Checkbox</type>
</CustomField>