force-app/main/default/objects/Form_Picklist__c/fields/Range_end__c.field-meta.xml
<CustomField>
    <fullName>Range_end__c</fullName>
    <description>The end value of the numeric range associated with this picklist</description>
    <inlineHelpText>The end value of the numeric range associated with this picklist</inlineHelpText>
    <label>Range end</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>