force-app/main/default/objects/Form_Picklist__c/fields/Range_start__c.field-meta.xml
<CustomField>
    <fullName>Range_start__c</fullName>
    <description>The start value of the numeric range associated with this picklist</description>
    <inlineHelpText>The start value of the numeric range associated with this picklist</inlineHelpText>
    <label>Range start</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>