force-app/main/default/objects/Form_Picklist__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of this picklist</description>
    <inlineHelpText>The type of this picklist</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phrases</fullName>
                <default>true</default>
                <label>Phrases</label>
            </value>
            <value>
                <fullName>Numeric range</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
            <value>
                <fullName>Constants</fullName>
            </value>
            <value>
                <fullName>Countries</fullName>
            </value>
            <value>
                <fullName>Contacts</fullName>
            </value>
            <value>
                <fullName>Contacts with email</fullName>
            </value>
            <value>
                <fullName>Contacts with email (Applicant email invalid)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>